--- a/public/css/main.css
+++ b/public/css/main.css
@@ -198,4 +198,12 @@ body {
     color:red;
     width:50%
 }
-main.css
+    #textShowAll{
+        display: inline;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        color:white;
+        width:50%
+    }
