--- a/public/css/main.css
+++ b/public/css/main.css
@@ -199,7 +199,7 @@ body {
     width:50%
 }
     #textShowAll{
-        display: inline;
+        display: none;
         position: absolute;
         top: 50%;
         left: 50%;
