finish desktop demo

--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -178,8 +178,9 @@
 </script>
 
 <script>
-    var audioFolder = "https://192.168.1.4:3000/assets/Audio/items/"
-    var videoFolder = "https://192.168.1.4:3000/assets/Video/"
+    var websiteUrl = "https://54.187.148.253:3000";
+    var audioFolder = websiteUrl + "/assets/Audio/items/"
+    var videoFolder = websiteUrl + "/assets/Video/"
     var imageFolder = "assets/Images/"
     var nameFacesImageFolder = "assets/Images/2062/"
     var takePictureIntervalInMilliSeconds = 120000;
