--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -157,7 +157,7 @@
     var videoFolder = websiteUrl + "/assets/Video/"
     var imageFolder = "assets/Images/"
     var nameFacesImageFolder = "assets/Images/2062/"
-    
+    var postFlacUrl = "/api/upload/audio/"
     var takePictureIntervalInMilliSeconds = 120000;
     var takePictureIntervalId = null;
 
@@ -205,6 +205,7 @@
     }
 
     function postItemResponse(stream) {
+        console.log("start postItemResponse");
         $.post("/api/session/updateSessionState", {itemResponse : itemResponse}, function(data) {
             if(data!="ok") {
                 var errorMessage = "Upload response for testItem type:"+item.type+", item:"+item.item + " failed with message: " + data;
@@ -212,10 +213,9 @@
                 JL("client").error(errorMessage);
             } else {
                 JL("client").error("Upload response for testItem type:"+item.type+", item:"+item.item + " succeeded.");
-                //processItem(stream);
+                processItem(stream);
             }
         })
-        processItem(stream);
     }
 
     function postPictureResponseAndMarkEnd() {
@@ -333,24 +333,13 @@
         nextButton.style.display = 'none';
         var audioFileName = item.type+"."+(item.item==0 ? "mp3" : item.item+".mp3");
         audioGlobal.src = audioFolder + audioFileName;
+        audioGlobal.play();
         audioGlobal.onended = function() {
             instr.style.display="none";
             JL("client").info("Leave processInstruction for :"+item.type+", item:"+item.item);
             processItem(stream);
         }
-
         //instr.style.display = "inline";
-        audioGlobal.play();
-    }
-
-    function processTransition(stream, item) {
-        nextButton.style.display = 'none';
-        var source = audioFolder+item.audio; //TODO: not used
-        audioGlobal.src = source;
-        audioGlobal.onended = function() {
-            processItem(stream);
-        }
-        audioGlobal.play();
     }
 
     function processNextAudioInAudioQuestions(audioList, aindex, stream, item) {
@@ -374,8 +363,8 @@
         audioGlobal.onended = function() {
             JL("client").info("End Playing audio: " + audioList[aindex]+". Start Recording. ");
             analyser.style.display = "inline";
-            gotStream(stream);
-            startRecording();
+            //gotStream(stream);
+            resumeRecording();
             subResponseStartTime = new Date();
             itemSubResponse.extraInfo='the No. '+(aindex+1) +' recording';
 
@@ -383,9 +372,13 @@
                 function () {
                     nextButton.style.display = "inline";
                     nextButton.onclick = function () {
-                        JL("client").info("End Recording for question " + audioList[aindex]+". Next button Clicked. ");
+                        JL("client").info("End Recording for question " + audioList[aindex] + ". Next button Clicked. ");
                         stopTimer();
-                        stopRecording();
+                        if (aindex == audioList.length - 1) {
+                            stopRecording();
+                        } else {
+                            pauseRecording();
+                        }
                         subResponseEndTime = new Date();
                         itemResponse.status = "NEXT_TOUCHED";
                         itemSubResponse.status = "NEXT_TOUCHED";
@@ -405,7 +398,11 @@
                 function () {
                     JL("client").info("End Recording for question " + audioList[aindex]+". Max Timeout reached. ");
                     stopTimer();
-                    stopRecording();
+                    if (aindex == audioList.length - 1) {
+                        stopRecording();
+                    } else {
+                        pauseRecording();
+                    }
                     subResponseEndTime = new Date();
                     itemResponse.status = "MAX_TIMEOUT";
                     itemSubResponse.status = "MAX_TIMEOUT";
@@ -454,7 +451,11 @@
                     nextButton.onclick = function() {
                         JL('client').info("End Recording for No."+(aindex+1)+" question of " + item.type+"."+item.item +". Next button clicked.");
                         stopTimer();
-                        stopRecording();
+                        if (aindex == audioFileList.length - 1) {
+                            stopRecording();
+                        } else {
+                            pauseRecording();
+                        }
                         nextButton.style.display = "none";
                         analyser.style.display = "none";
 
@@ -473,7 +474,11 @@
                 },
                 function() {
                     stopTimer();
-                    stopRecording();
+                    if (aindex == audioFileList.length - 1) {
+                        stopRecording();
+                    } else {
+                        pauseRecording();
+                    }
                     JL('client').info("End Recording for No."+(aindex+1)+" question of " + item.type+"."+item.item +". Max timeout reached.");
 
                     nextButton.style.display = "none";
@@ -543,16 +548,14 @@
             audioGlobal.onended = function() {
                 JL('client').info("End playing audio: " + audioList[1]+". Start timer and recording for interviewer to say the name.");
                 analyser.style.display = "inline";
-                gotStream(stream);
-
                 responseStartTime = subResponseStartTime = new Date();
-
+                gotStream(stream);
                 startRecording();
                 startTimer(0, item.mtimeout,
                     null,
                     function () {
                         stopTimer();
-                        stopRecording();
+                        pauseRecording();
 
                         subResponseEndTime = new Date();
                         itemSubResponse.extraInfo = facePictureFiles.join(':')+','+namesArray.join(':')+','+selectedName;
@@ -571,8 +574,8 @@
                         audioGlobal.play();
                         JL('client').info("Start playing audio: " + item.type+"."+sex+".mp3"+ ". Asking what is he/she feeling. Start Recording.");
                         audioGlobal.onended = function() {
-                            gotStream(stream);
-                            startRecording();
+                            //gotStream(stream);
+                            resumeRecording();
                             itemSubResponse = {};
                             itemSubResponse.extraInfo = item.namefacePicPicked.filename+":"+item.type+"."+sex+".mp3"
                             subResponseStartTime = new Date();
@@ -769,12 +772,13 @@
             itemSubResponse.extraInfo='the No. '+(vindex+1) +' recording';
 
             analyser.style.display="inline";
+            gotStream(stream);
             startRecording();
             JL('client').info("Start playing video " + item.video+" and recording.");
             video.onended = function() {
                 analyser.style.display="none";
                 JL('client').info("End playing video " + item.video+" and recording.");
-                stopRecording();
+                pauseRecording();
 
                 subResponseEndTime = new Date();
                 itemSubResponse.status = "MAX_TIMEOUT";
@@ -821,8 +825,8 @@
             subResponseStartTime = new Date();
 
             analyser.style.display = "inline";
-            gotStream(stream);
-            startRecording();
+            //gotStream(stream);
+            resumeRecording();
             startTimer(item.itimeout, item.mtimeout,
                 function(){
                     nextButton.style.display="inline";
@@ -843,7 +847,11 @@
 
 
                         stopTimer();
-                        stopRecording();
+                        if(vindex==audioList.length-1) {
+                            stopRecording();
+                        } else {
+                            pauseRecording();
+                        }
                         nextButton.style.display = "none";
                         analyser.style.display = "none";
                         playAudioInDescribeVideo(audioList, vindex+1, stream, item);
@@ -865,7 +873,11 @@
 
 
                     stopTimer();
-                    stopRecording();
+                    if(vindex==audioList.length-1) {
+                        stopRecording();
+                    } else {
+                        pauseRecording();
+                    }
                     nextButton.style.display = "none";
                     analyser.style.display = "none";
                     playAudioInDescribeVideo(audioList, vindex+1, stream, item);
@@ -982,6 +994,7 @@
                 }
             }
             showWord();
+            gotStream(stream);
             startRecording();
             JL('client').info("Start recording during word show in QuickLit.");
             //startTimer(0, item.mtimeout, null, showWord);
@@ -1018,7 +1031,7 @@
     function processMicrophoneChecker(stream, item) {
         var source = audioFolder + item.audio;
         audioGlobal.src = source;
-        gotStream(stream);
+
         JL("client").info("Entering processMicrophoneChecker for " +item.type+"."+item.item );
         instr.innerHTML="Name and Location";
         instr.style.display = "inline";
@@ -1035,13 +1048,13 @@
         itemSubResponse = {};
 
 
-
+        gotStream(stream);
         startRecording();
         audioGlobal.play();
         audioGlobal.onended = function() {
             document.getElementById("analyser").style.display="inline";
             JL('client').info("Start recording for microphone checker. Playing audio 2000.2.mp3.");
-            stopRecording();
+            //stopRecording();
 
             subResponseEndTime = new Date();
             itemSubResponse.extraInfo='the No. 1 recording';
@@ -1063,7 +1076,7 @@
             subResponseStartTime = new Date();
             itemSubResponse.extraInfo='the No. 2 recording';
 
-            startRecording();
+            //startRecording();
             startTimer(0, item.mTimeout, null, function() {
                 stopRecording();
                 JL('client').info("Stop recording for microphone checker. Playing audio 2000.2.mp3.");
@@ -1127,7 +1140,6 @@
                 }
 
             })
-            //toggleRecording(this);
         };
 
     }
@@ -1137,7 +1149,6 @@
         questionList = data;
         navigator.getUserMedia({audio: true, video: false}, function (stream) {
             nextButton.onclick = function () {
-
                 processItem(stream);
             }
         }, function (error) {
