--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -9,6 +9,7 @@
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/jsnlog.js/jsnlog.js"></script>
+    <script src="/webcamjs/webcam.js"></script>
     <script src="js/tracktap.js"></script>
     <script src="js/recorderjs/audiodisplay.js"></script>
     <script src="js/recorderjs/recorder.js"></script>
@@ -49,8 +50,7 @@
 <div class="container">
 
     <div id="top" class="row panel-body ">
-        <div id="camera_div" class="col-lg-2">
-            <span><video id="camera" autoplay width="100%" height="100%"></video></span>
+        <div id="cameraDiv" class="col-lg-2" style="width:100%; height:100%;">
         </div>
         <div id="timer_div" class="col-lg-offset-7 col-lg-1">
             <% include partials/timer.ejs %>
@@ -134,6 +134,7 @@
             </div>
         </div>
     </div>
+    <div id="my_result"></div>
 
     <div id="bottom">
         <div id="microphone"  class="row" >
@@ -184,8 +185,10 @@
     var audioGlobal = document.getElementById('audioGlobal');
     JL("client").info("Interview started");
 
+
     function takePictureAndUpload() {
         JL("client").info("Taking picture for the interviewer with pictureId: " + (++pictureId));
+
         var picture = {};
         picture.takenItem = item.item;
         picture.takenType = item.type;
@@ -193,15 +196,19 @@
         picture.pngFileName = 'camera'+pictureId+'.png';
         picture.elapsedTime = (new Date() - interviewStartTime)/1000;
         //TODO: upload picture to S3
-        $.post('/api/session/cameraPictureSessionData', {pictureInfo: picture}, function(data) {
-            if (data != "ok") {
-                var errorMessage = "Upload cameraPicture failed with message: " + data;
-                console.error(errorMessage);
-                JL("client").error(errorMessage);
-            } else {
-                JL("client").error("Upload CameraPicture succeeded.");
-            }
-        });
+        takeSnapshot(function(){
+            JL("client").info("Uploaded picture for the interviewer with pictureId: " + pictureId);
+            $.post('/api/session/cameraPictureSessionData', {pictureInfo: picture}, function(data) {
+                if (data != "ok") {
+                    var errorMessage = "Upload cameraPicture Session data failed with message: " + data;
+                    console.error(errorMessage);
+                    JL("client").error(errorMessage);
+                } else {
+                    JL("client").error("Upload CameraPicture succeeded.");
+                }
+            });
+        })
+
     }
 
     function postItemResponse(stream) {
@@ -1144,7 +1151,27 @@
 
     }
 
-    startCamera();
+
+    Webcam.set({
+        width: $("body").innerWidth()/6,
+        height: $("body").innerWidth()/8,
+        image_format: 'png'
+    });
+    Webcam.attach('#cameraDiv');
+
+    function takeSnapshot(callback) {
+        Webcam.snap( function(data_uri) {
+            // snap complete, image data is in 'data_uri'
+            var picName = 'camera'+pictureId+'.png';
+            Webcam.upload( data_uri, '/api/upload/picture/'+picName, function(code, text) {
+                if(text=='ok') {
+                    callback();
+                }
+            } );
+
+        } );
+    }
+
     $.get("/questionSet", function(data) {
         questionList = data;
         navigator.getUserMedia({audio: true, video: false}, function (stream) {
